Added report type nql/sql

--- a/src/app/report/lang/de.ini
+++ b/src/app/report/lang/de.ini
@@ -10,3 +10,4 @@ script_cmd_run_sql_query_label = "NQL Query"
 script_cmd_run_report_results_title = "Ergebnisse"
 
 query_variables_string_label = "Name"
+no_results_given_txt = "Es sind keine Ergebnisse im Report enthalten."
